--- a/portfolio.html
+++ b/portfolio.html
@@ -103,7 +103,7 @@
                 </p>
                 <div class="linkstyle">
                     <a href="https://drive.google.com/open?id=1wfFlOh-fKhtWJTYBrJ5X8LqkftRSdBfG">
-                        - Dokumentationsprocess
+                        - Dokumentation
                     </a>
                     <a href="http://emiljeemilje.dk/kea/02-animation/spil/index.html">
                         - Animationsspil:1
@@ -124,7 +124,7 @@
                 <h3>Udvalgt projekt: gruppe-animationspil</h3>
                 <p>Denne udvalgte opgave var et gruppeprojekt. Opgaven blev stillet i samarbejde med virksomheden, Sex og Samfund, som ønskede en interaktiv fortælling. Vi løste opgaven ved hjælp af de teorier og teknikker, der er gennemgået i de første tre moduler. Projektet blev afsluttet med en fernisering, hvor både kunden og repræsentanter for målgruppen deltog og prøvede vores færdige produkt. </p>
                 <a href="http://emiljeemilje.dk/kea/02-animation/dokumentationsside_np/">
-                    - Dokumentationsprocess
+                    - Dokumentation
                 </a>
                 <a href="http://emiljeemilje.dk/kea/02-animation/projekt/">
                     - Animationsspil:2
@@ -144,8 +144,8 @@
             <div class="col">
                 <h3>Udvalgt projekt: redesign</h3>
                 <p>Denne udvalgte opgave var et gruppeprojekt. Opgaven var at redesigne og udvikle content til en allerede eksisterende virksomhed. Vi valgte en bondegård, som trængte til et frisk pust. Vi anvendte metoder til brugertest af digitale produktioner og lærte at anvende grundlæggende teorier, metoder og værktøjer til styring af enkel multimedieproduktion, der knytter sig til praksis i erhvervet. Vi løste opgaven ved hjælp af de teorier og teknikker, der er gennemgået i de sidste tre måneder.</p>
-                <a href="http://emiljeemilje.dk/kea/02-animation/dokumentationsside_np/">
-                    - Dokumentationsprocess
+                <a href="http://emiljeemilje.dk/kea/03-content/03-redesign/03_02_07_dokumentationssite/forside.html">
+                    - Dokumentation
                 </a>
                 <a href="http://emiljeemilje.dk/kea/03-content/03-redesign/03_02_08_redesign/">
                     - Redesign
@@ -168,7 +168,7 @@
                 </p>
 
                 <a href="https://drive.google.com/open?id=13d8KLGgtWBabLmuxOam1eNyVfLyEpwT0">
-                    - Dokumentationsprocess
+                    - Dokumentation
                 </a>
                 <a href="https://xd.adobe.com/view/27f92c73-871a-49ad-7e95-fa38184b8f4b-51c8/">
                     - Native app
@@ -184,4 +184,6 @@
 
 
     <script src="script.js"></script>
-</body></html>
+</body>
+
+</html>
